k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bigproject
  name: apigateway
  annotations:
    configmap.reloader.stakater.com/reload: apigateway
    secret.reloader.stakater.com/reload: apigateway
spec:
  selector:
    matchLabels:
      app: apigateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: #Template for container
    metadata:
      labels:
        app: apigateway
    spec:
      restartPolicy: Always
      containers:
      - name: apigateway
        image:  asia.gcr.io/plenary-line-385613/apigateway:$COMMITID
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: apigateway
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 128m
            memory: 500Mi
