k8s/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: bigproject
  labels:
    app: apigateway
spec:
  selector:
    app: apigateway
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  type: NodePort
