k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bigproject
  name: apigateway-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: ${ENV_STAGE}-api-bigproject
    networking.gke.io/managed-certificates: apigateway-cert
spec:
  rules:
  - host: ${ENV_STAGE}.apigateway.bigproject.papasoleh.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/*"
        backend:
          service:
            name: apigateway-svc
            port:
              number: 3000
